# zed-yolo-ros

./: .gitignore  CMakeLists.txt  LICENSE  README.md  coco.yaml  package.xml  setup.py
launch/: zed.launch  zed_yolo.launch
models/: .gitignore  yolov8m-ch_labels.txt  yolov8x-pose_labels.txt  yolov8x_labels.txt
msg/: Keypoint3D.msg  Object.msg  ObjectsStamped.msg  People.msg  Skeleton3D.msg
scripts/: coco.yaml  detector.py  detector_with_gui.py
src/cv_viewer/: tracking_viewer.py
